# rust-fullstack

./: .gitignore  README.md  rustfmt.toml
dioxus/: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json
dioxus/src/: main.rs  not_found.rs
dioxus/src/todo_app/: app.rs  mod.rs  server_functions.rs  types.rs
rocket_and_yew/: .gitignore  Cargo.toml  README.md
rocket_and_yew/backend/: Cargo.toml
rocket_and_yew/backend/src/: main.rs
rocket_and_yew/backend/src/controllers/: todos.rs
rocket_and_yew/frontend/: Cargo.toml  Trunk.toml  index.html
rocket_and_yew/frontend/src/: api.rs  main.rs  todo_view.rs
rocket_and_yew/frontend/styles/: todo_view.css
rocket_and_yew/shared/src/: lib.rs
todo-leptos/: .gitignore  Cargo.toml  README.md
todo-leptos/src/: app.rs  main.rs  server.rs
todo-leptos/style/: main.scss
