[package]
name = "todo_dioxus"
version = "0.2.0"
authors = ["Goetz Markgraf <goeetz.markgraf@codecentric.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
manganis = "0.2.2"
serde_json = "1.0.128"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
