[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared"}
reqwest = { version = "0.12.7", features = ["json"]}
web-sys = "0.3.70"
gloo = "0.11.0"
wasm-bindgen-futures = "0.4.43"
