[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
reqwest = { version = "0.12.15", features = ["json"] }
web-sys = "0.3.77"
gloo = "0.11"
wasm-bindgen-futures = "0.4.50"
